Произвел рефакторинг класса volunteer.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/Animal-shelter-DB
-spring.datasource.username=ByRoman
-spring.datasource.password=123
-telegram.bot.token=6956888569:AAEFrZelVSc43_vrzZ6vVG1rNio1lePqzVc
+spring.datasource.url=jdbc:postgresql://localhost:5432/Telegram-Bot
+spring.datasource.username=TelegramBot
+spring.datasource.password=Over1987
+telegram.bot.token=6650132113:AAEgdzAqRFKuWbV5i_jViUd2M1ucfwRu02k
 
 spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
 path.to.photo.folder=/photoAnimal
